2026-02-13 18:45:59 - Auto commit via CLI